Fixed social links not showing in production.

--- a/pages/pages.about.module.css
+++ b/pages/pages.about.module.css
@@ -1,11 +1,3 @@
-@media (min-width:600px)
-{
-	.socialLinks
-	{
-		margin: 2rem;
-	}
-}
-
 .socialLogo
 {
 	width: 4rem;
@@ -31,10 +23,4 @@
 	font-size: 300%;
 	font-weight: bolder;
 	line-height: 100%;
-}
-
-.socialLinks
-{
-	display: flex;
-	flex-direction: column;
 }
